Revert "TU-2180: Grouping all updates (major, minor, patch) into the same (long lived) PR, except those specifically excluded."
This reverts commit 9076c97b0d46f2011565ca2c75f320453c6a2a63.

--- a/renovate-config.json
+++ b/renovate-config.json
@@ -1,7 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "description": "Shared Renovate configuration for dsb-norge projects. Updates of all types are collected into the same PR, except for major updates of the excluded packages.",
-
+  "description": "Shared Renovate configuration for dsb-norge projects where major updates get separate PRs so that they can be closed (non-immortal)",
   "enabledManagers": ["npm"],
   "extends": [
     ":dependencyDashboard",
@@ -14,26 +13,34 @@
   ],
   "packageRules": [
     {
-      "groupName": "frontend - major, minor and patch",
-      "matchUpdateTypes": ["major", "minor", "patch"],
-      "excludePackageNames": [
-        "@vitejs/plugin-vue",
-        "@dsb-norge/eslint-config-dsb-vue",
-        "bootstrap",
-        "eslint",
-        "keycloak-js",
-        "sass-loader",
-        "vue",
-        "vue-i18n",
-        "vue-router",
-        "vuex"
-      ],
-      "excludePackagePrefixes": [
-        "@vue/cli-",
-        "eslint-plugin-"
-      ]
+      "groupName": "frontend - minor and patch",
+      "matchUpdateTypes": ["minor", "patch"]
     }
   ],
+  "major": {
+    "packageRules": [
+      {
+        "groupName": "frontend",
+        "matchUpdateTypes": ["major"],
+        "excludePackageNames": [
+          "@vitejs/plugin-vue",
+          "@dsb-norge/eslint-config-dsb-vue",
+          "bootstrap",
+          "eslint",
+          "keycloak-js",
+          "sass-loader",
+          "vue",
+          "vue-i18n",
+          "vue-router",
+          "vuex"
+        ],
+        "excludePackagePrefixes": [
+          "@vue/cli-",
+          "eslint-plugin-"
+        ]
+      }
+    ]
+  },
   "ignoreScripts": true,
   "prHourlyLimit": 4,
   "reviewers": ["dsb-developers"],
