Excluding sass as newer versions generates a lot of unnecessary noise.

--- a/renovate-config-no-major.json
+++ b/renovate-config-no-major.json
@@ -14,7 +14,8 @@
   "packageRules": [
     {
       "groupName": "frontend - minor and patch",
-      "matchUpdateTypes": ["minor", "patch"]
+      "matchUpdateTypes": ["minor", "patch"],
+      "excludePackageNames": ["sass"]
     }
   ],
   "major": {
