Removing exclusion for sass, verbosity can instead be controlled by setting sassOptions.quietDeps where needed.

--- a/renovate-config.json
+++ b/renovate-config.json
@@ -14,8 +14,7 @@
   "packageRules": [
     {
       "groupName": "frontend - minor and patch",
-      "matchUpdateTypes": ["minor", "patch"],
-      "excludePackageNames": ["sass"]
+      "matchUpdateTypes": ["minor", "patch"]
     }
   ],
   "ignoreScripts": true,
