fix: ignore @​vue/tsconfig since it requires TS 5 in >0.1.3

--- a/renovate-config.json
+++ b/renovate-config.json
@@ -19,7 +19,8 @@
     }
   ],
   "ignoreDeps": [
-    "sass"
+    "sass",
+    "@​vue/tsconfig"
   ],
   "ignoreScripts": true,
   "prHourlyLimit": 4,
