add "@​vue/tsconfig" to excludePackageNames as well

--- a/renovate-config.json
+++ b/renovate-config.json
@@ -15,7 +15,7 @@
     {
       "groupName": "frontend - minor and patch",
       "matchUpdateTypes": ["minor", "patch"],
-      "excludePackageNames": ["sass"]
+      "excludePackageNames": ["sass", "@​vue/tsconfig"]
     }
   ],
   "ignoreDeps": [
