Should be ok to auto-update sass now. But vue-keycloak-js should be fixed, we cannot update because of KC version.

--- a/renovate-config.json
+++ b/renovate-config.json
@@ -15,11 +15,11 @@
     {
       "groupName": "frontend - minor and patch",
       "matchUpdateTypes": ["minor", "patch"],
-      "excludePackageNames": ["sass", "@​vue/tsconfig"]
+      "excludePackageNames": ["@\u200Bdsb-norge/vue-keycloak-js", "@​vue/tsconfig"]
     }
   ],
   "ignoreDeps": [
-    "sass",
+    "@\u200Bdsb-norge/vue-keycloak-js",
     "@​vue/tsconfig"
   ],
   "ignoreScripts": true,
