fix(renovate): schedule: allow operations during weekends

--- a/renovate-config-no-major.json
+++ b/renovate-config-no-major.json
@@ -24,6 +24,10 @@
   "ignoreScripts": true,
   "prHourlyLimit": 4,
   "reviewers": ["dsb-developers"],
+  "schedule": [
+    "after 12:30am and before 3:30am every weekday",
+    "every weekend"
+  ],
   "updateNotScheduled": false,
   "timezone": "UTC"
 }
