--- a/renovate-config.json
+++ b/renovate-config.json
@@ -65,7 +65,8 @@
     "dsb-developers"
   ],
   "schedule": [
-    "after 12:30am and before 6:30am every weekday"
+    "after 12:30am and before 6:30am every weekday",
+    "every weekend"
   ],
   "updateNotScheduled": false,
   "timezone": "UTC"
