--- a/renovate-config.json
+++ b/renovate-config.json
@@ -70,5 +70,8 @@
   ],
   "updateNotScheduled": false,
   "timezone": "UTC",
-  "automerge": true
+  "automerge": true,
+  "labels": [
+    "renovate"
+  ]
 }
