add labels to config (#9)
Co-authored-by: Peder Schmedling <24737456+Laffs2k5@users.noreply.github.com>

--- a/renovate-config.json
+++ b/renovate-config.json
@@ -70,5 +70,8 @@
   ],
   "updateNotScheduled": false,
   "timezone": "UTC",
-  "automerge": true
+  "automerge": true,
+  "labels": [
+    "pr-created-by-renovate"
+  ]
 }
