--- a/renovate-config-iac.json
+++ b/renovate-config-iac.json
@@ -29,9 +29,9 @@
     "reviewers": [
         "dsb-developers"
     ],
-    "timezone": "Europe/Stockholm",
+    "timezone": "UTC",
     "schedule": [
-        "after 01:20am and before 7:30am every weekday",
+        "after 03:30am and before 7:30am every weekday",
         "every weekend"
     ],
     "updateNotScheduled": false,
@@ -40,7 +40,7 @@
       ],
       "lockFileMaintenance": {
         "enabled": true,
-        "schedule": "after 01:20am and before 6:30am every weekday"
+        "schedule": "after 03:30am and before 7:30am every weekday"
 
     }
 }
