feat: change assignees to reviewers

--- a/renovate-config-iac.json
+++ b/renovate-config-iac.json
@@ -25,7 +25,7 @@
     "major": {
         "enabled": true
     },
-    "assignees": [
+    "reviewers": [
         "Artlvns",
         "Laffs2k5"
     ],
