--- a/renovate-config-iac.json
+++ b/renovate-config-iac.json
@@ -25,14 +25,9 @@
     "major": {
         "enabled": true
     },
-    "reviewers": [
-        "Artlvns",
-        "Laffs2k5"
-    ],
     "timezone": "UTC",
     "schedule": [
-        "after 03:30am and before 7:30am every weekday",
-        "every weekend"
+        "after 03:30am and before 7:30am"
     ],
     "updateNotScheduled": true,
     "labels": [
