chore: add "iac" label to iac renovate config

--- a/renovate-config-iac.json
+++ b/renovate-config-iac.json
@@ -31,7 +31,8 @@
     ],
     "updateNotScheduled": true,
     "labels": [
-        "pr-created-by-renovate"
+        "pr-created-by-renovate",
+        "iac"
       ],
       "lockFileMaintenance": {
         "enabled": true,
