--- a/renovate-config.json
+++ b/renovate-config.json
@@ -50,6 +50,14 @@
       ],
       "matchVersions": ["8.15.x"],
       "enabled": false
+    },
+    {
+      "matchManagers": ["maven"],
+      "matchPackageNames": [
+        "org.apache.sshd:sshd-scp"
+      ],
+      "matchVersions": ["2.14.x"],
+      "enabled": false
     }
   ],
   "hostRules": [
