chore: move renovate update schedule to Europe/Oslo TZ to better account for DST

--- a/renovate-config.json
+++ b/renovate-config.json
@@ -80,7 +80,7 @@
     "every weekend"
   ],
   "updateNotScheduled": false,
-  "timezone": "UTC",
+  "timezone": "Europe/Oslo",
   "automerge": true,
   "labels": [
     "pr-created-by-renovate"
