Allow renovate to bump majors for no.dsb (internal) maven dependencies to not be stuck in 2024

--- a/renovate-config.json
+++ b/renovate-config.json
@@ -67,6 +67,13 @@
         "no.dsb:elastic-exporter-api",
         "no.dsb:brannstatistikk-api"
       ]
+    },
+    {
+      "matchManagers": ["maven"],
+      "matchPackagePatterns": ["^no\\.dsb.*"],
+      "major": {
+        "enabled": true
+      }
     }
   ],
   "ignoreScripts": true,
