Revert "chore(renovate): rewrite some rules based on validation scheme and official docs"
This reverts commit 040c3b9cc5250054039f2c815e35d843a2cc8d29.

--- a/renovate-config.json
+++ b/renovate-config.json
@@ -2,15 +2,14 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "description": "Shared Renovate configuration for dsb-norge projects. Minor and patch updates are collected into the same PR, while major updates are ignored.",
   "platform": "github",
-  "enabledManagers": [
-    "npm",
-    "maven"
-  ],
+  "enabledManagers": ["npm", "maven"],
   "extends": [
+    ":autodetectPinVersions",
     ":prConcurrentLimit10",
     "workarounds:all",
     ":semanticPrefixFixDepsChoreOthers",
     ":ignoreModulesAndTests",
+    ":autodetectPinVersions",
     ":pinAllExceptPeerDependencies",
     ":disableMajorUpdates"
   ],
@@ -27,83 +26,55 @@
       ]
     },
     {
-      "matchManagers": [
-        "npm"
-      ],
-      "matchPackageNames": [
-        "typescript"
-      ],
-      "allowedVersions": [
-        "!/>=5.7.0/"
-      ],
+      "matchManagers": ["npm"],
+      "matchPackageNames": ["typescript"],
+      "matchVersions": [">=5.7.0"],
       "enabled": false
     },
     {
-      "matchManagers": [
-        "npm"
-      ],
-      "matchPackageNames": [
-        "vue-tsc"
-      ],
-      "allowedVersions": [
-        "!/2.2.0/"
-      ],
+      "matchManagers": ["npm"],
+      "matchPackageNames": ["vue-tsc"],
+      "matchVersions": ["2.2.0"],
       "enabled": false
     },
     {
-      "matchDatasources": [
-        "maven"
-      ],
+      "matchDatasources": ["maven"],
       "registryUrls": [
         "https://maven.pkg.github.com/dsb-norge/.github",
         "https://repo.maven.apache.org/maven2/"
       ]
     },
     {
-      "matchManagers": [
-        "maven"
-      ],
+      "matchManagers": ["maven"],
       "matchPackageNames": [
         "co.elastic.clients:elasticsearch-java",
         "org.elasticsearch.client:elasticsearch-rest-client"
       ],
-      "allowedVersions": [
-        "!/8.15.x/"
-      ],
+      "matchVersions": ["8.15.x"],
       "enabled": false
     },
     {
-      "matchManagers": [
-        "maven"
-      ],
+      "matchManagers": ["maven"],
       "matchPackageNames": [
         "org.apache.sshd:sshd-scp"
       ],
-      "allowedVersions": [
-        "!/2.14.x/"
-      ],
+      "matchVersions": ["2.14.x"],
       "enabled": false
     },
     {
-      "matchManagers": [
-        "maven"
-      ],
-      "matchPackageNames": [
-        "!no.dsb:elastic-exporter-api",
-        "!no.dsb:brannstatistikk-api"
+      "matchManagers": ["maven"],
+      "excludePackageNames": [
+        "no.dsb:elastic-exporter-api",
+        "no.dsb:brannstatistikk-api"
       ]
     },
     {
-      "matchManagers": [
-        "maven"
-      ],
-      "matchUpdateTypes": [
-        "major"
-      ],
-      "enabled": true,
-      "matchPackageNames": [
-        "/^no\\.dsb.*/"
-      ]
+      "matchManagers": ["maven"],
+      "matchPackagePatterns": ["^no\\.dsb.*"],
+      "groupName": "combined - internal dependencies",
+      "major": {
+        "enabled": true
+      }
     }
   ],
   "ignoreScripts": true,
