--- a/renovate-config.json
+++ b/renovate-config.json
@@ -51,6 +51,11 @@
     },
     {
       "matchManagers": ["maven"],
+      "matchPackageNames": ["org.apache.cxf:cxf-spring-boot-starter-jaxws"],
+      "allowedVersions": "<4.0.5"
+    },
+    {
+      "matchManagers": ["maven"],
       "matchPackageNames": [
         "!no.dsb:elastic-exporter-api",
         "!no.dsb:brannstatistikk-api"
