--- a/renovate-config.json
+++ b/renovate-config.json
@@ -56,6 +56,11 @@
     },
     {
       "matchManagers": ["maven"],
+      "matchPackageNames": ["de.codecentric:spring-boot-admin-starter-server"],
+      "allowedVersions": "!=3.5.5"
+    },
+    {
+      "matchManagers": ["maven"],
       "matchPackageNames": [
         "!no.dsb:elastic-exporter-api",
         "!no.dsb:brannstatistikk-api"
