Locking test-harness bumping to one working for spring-boot 3.5.x until more applications are on sb 4

--- a/renovate-config.json
+++ b/renovate-config.json
@@ -61,6 +61,11 @@
     },
     {
       "matchManagers": ["maven"],
+      "matchPackageNames": ["no.dsb:dsb-test-harness"],
+      "allowedVersions": "<=2026.01.23.20965"
+    },
+    {
+      "matchManagers": ["maven"],
       "matchPackageNames": [
         "!no.dsb:elastic-exporter-api",
         "!no.dsb:brannstatistikk-api"
