Attempt at fixing renovate crash #2

--- a/renovate-config.json
+++ b/renovate-config.json
@@ -62,7 +62,8 @@
     {
       "matchManagers": ["maven"],
       "matchPackageNames": ["no.dsb:dsb-test-harness"],
-      "allowedVersions": "[,2026.01.23.20965]"
+      "versioning": "loose",
+      "allowedVersions": "<=2026.01.23.20965"
     },
     {
       "matchManagers": ["maven"],
