--- a/renovate-config.json
+++ b/renovate-config.json
@@ -62,8 +62,7 @@
     {
       "matchManagers": ["maven"],
       "matchPackageNames": ["no.dsb:dsb-test-harness"],
-      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)\\.(?<build>\\d+)$",
-      "allowedVersions": "<=2026.01.23.20965"
+      "enabled": false
     },
     {
       "matchManagers": ["maven"],
