--- a/renovate-config.json
+++ b/renovate-config.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "description": "Shared Renovate configuration for dsb-norge projects. Minor and patch updates are collected into the same PR, while major updates are ignored.",
   "platform": "github",
-  "enabledManagers": ["npm", "maven", "python"],
+  "enabledManagers": ["npm", "maven", "pep621"],
   "extends": [
     ":prConcurrentLimit10",
     "workarounds:all",
@@ -13,7 +13,7 @@
   ],
   "packageRules": [
     {
-      "matchManagers": ["maven", "npm"],
+      "matchManagers": ["maven", "npm", "pep621"],
       "groupName": "combined - minor and patch",
       "matchUpdateTypes": ["minor", "patch"]
     },
